--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Apple logo.png
+    - assets/Character.png
     - assets/Google.png
     - assets/LMNTRI_1571641805.png
     
